[package]
name = "bevy_3d_person"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_obj = { version = "0.13", features = ["scene"] }
bevy_third_person_camera = "0.1.8"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
